[package]
name = "streams"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.11.1"
dashmap = "6.2.1"
futures = "0.3.32"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tower = { version = "0.5.3", features = ["util"] }
